--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   "author": "Shaun Pienaar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "nodemailer": "^6.4.11"
   },
   "engines": {
     "node": "8.11.1"
+  },
+  "devDependencies": {
+    "dotenv": "^8.1.0"
   }
 }
